// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> AlignTableCellContentCenter story renders snapshot 1`] = `
<table
  class="table"
>
  <caption
    class="table__caption u-is-vishidden"
  >
    This is a table caption and it is required
  </caption>
  <thead
    class="table__header"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__cell table__cell--align-center"
      >
        Name
      </th>
      <th
        class="table__cell table__cell--align-center"
      >
        Status
      </th>
      <th
        class="table__cell table__cell--align-center"
      >
        Chart
      </th>
      <th
        class="table__cell table__cell--align-center"
      >
        Window
      </th>
      <th
        class="table__cell table__cell--align-center"
      >
        Last Update
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table__row"
    >
      <td
        class="table__cell table__cell--align-center"
        data-label="Name"
      >
        Table Row 1, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Status"
      >
        Table Row 1, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Chart"
      >
        Table Row 1, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Window"
      >
        Table Row 1, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Last Update"
      >
        Table Row 1, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell table__cell--align-center"
        data-label="Name"
      >
        Table Row 2, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Status"
      >
        Table Row 2, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Chart"
      >
        Table Row 2, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Window"
      >
        Table Row 2, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Last Update"
      >
        Table Row 2, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell table__cell--align-center"
        data-label="Name"
      >
        Table Row 3, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Status"
      >
        Table Row 3, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Chart"
      >
        Table Row 3, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Window"
      >
        Table Row 3, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Last Update"
      >
        Table Row 3, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell table__cell--align-center"
        data-label="Name"
      >
        Table Row 4, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Status"
      >
        Table Row 4, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Chart"
      >
        Table Row 4, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Window"
      >
        Table Row 4, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Last Update"
      >
        Table Row 4, Table Cell 5
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> AlignTableCellContentRight story renders snapshot 1`] = `
<table
  class="table"
>
  <caption
    class="table__caption u-is-vishidden"
  >
    This is a table caption and it is required
  </caption>
  <thead
    class="table__header"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__cell table__cell--align-right"
      >
        Name
      </th>
      <th
        class="table__cell table__cell--align-right"
      >
        Status
      </th>
      <th
        class="table__cell table__cell--align-right"
      >
        Chart
      </th>
      <th
        class="table__cell table__cell--align-right"
      >
        Window
      </th>
      <th
        class="table__cell table__cell--align-right"
      >
        Last Update
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table__row"
    >
      <td
        class="table__cell table__cell--align-right"
        data-label="Name"
      >
        Table Row 1, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Status"
      >
        Table Row 1, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Chart"
      >
        Table Row 1, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Window"
      >
        Table Row 1, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Last Update"
      >
        Table Row 1, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell table__cell--align-right"
        data-label="Name"
      >
        Table Row 2, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Status"
      >
        Table Row 2, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Chart"
      >
        Table Row 2, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Window"
      >
        Table Row 2, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Last Update"
      >
        Table Row 2, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell table__cell--align-right"
        data-label="Name"
      >
        Table Row 3, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Status"
      >
        Table Row 3, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Chart"
      >
        Table Row 3, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Window"
      >
        Table Row 3, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Last Update"
      >
        Table Row 3, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell table__cell--align-right"
        data-label="Name"
      >
        Table Row 4, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Status"
      >
        Table Row 4, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Chart"
      >
        Table Row 4, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Window"
      >
        Table Row 4, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Last Update"
      >
        Table Row 4, Table Cell 5
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> Default story renders snapshot 1`] = `
<table
  class="table"
>
  <caption
    class="table__caption u-is-vishidden"
  />
  <thead
    class="table__header"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__cell"
      >
        Name
      </th>
      <th
        class="table__cell"
      >
        Status
      </th>
      <th
        class="table__cell"
      >
        Chart
      </th>
      <th
        class="table__cell"
      >
        Window
      </th>
      <th
        class="table__cell"
      >
        Last Update
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 5
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> SortableInteractive story renders snapshot 1`] = `
<table
  class="table"
>
  <caption
    class="table__caption u-is-vishidden"
  >
    This is a table caption and it is required
  </caption>
  <thead
    class="table__header"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__header-cell"
      >
        <button
          class="table__header-cell-button"
        >
          Sortable
          <div
            class="table__header-cell-sort"
          >
            <svg
              class="icon table__header-cell-icon"
              fill="currentColor"
              height="1rem"
              role="img"
              style="--icon-size: 1rem;"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="1"
              >
                Sort
              </title>
              <use
                xlink:href="test-file-stub#unfold-more"
              />
            </svg>
          </div>
        </button>
      </th>
      <th
        class="table__header-cell"
      >
        <div
          class="table__header-cell-contents"
        >
          Not sortable
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Value 1
      </td>
      <td
        class="table__cell"
      >
        Value A
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Value 3
      </td>
      <td
        class="table__cell"
      >
        Value B
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Value 2
      </td>
      <td
        class="table__cell"
      >
        Value C
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Value 4
      </td>
      <td
        class="table__cell"
      >
        Value D
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> Stacked story renders snapshot 1`] = `
<table
  class="table table--stacked"
>
  <caption
    class="table__caption u-is-vishidden"
  />
  <thead
    class="table__header"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__cell"
      >
        Name
      </th>
      <th
        class="table__cell"
      >
        Status
      </th>
      <th
        class="table__cell"
      >
        Chart
      </th>
      <th
        class="table__cell"
      >
        Window
      </th>
      <th
        class="table__cell"
      >
        Last Update
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
        data-heading="Name"
      >
        Table Row 1, Table Cell 1
      </td>
      <td
        class="table__cell"
        data-heading="Status"
      >
        Table Row 1, Table Cell 2
      </td>
      <td
        class="table__cell"
        data-heading="Chart"
      >
        Table Row 1, Table Cell 3
      </td>
      <td
        class="table__cell"
        data-heading="Window"
      >
        Table Row 1, Table Cell 4
      </td>
      <td
        class="table__cell"
        data-heading="Last Update"
      >
        Table Row 1, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
        data-heading="Name"
      >
        Table Row 2, Table Cell 1
      </td>
      <td
        class="table__cell"
        data-heading="Status"
      >
        Table Row 2, Table Cell 2
      </td>
      <td
        class="table__cell"
        data-heading="Chart"
      >
        Table Row 2, Table Cell 3
      </td>
      <td
        class="table__cell"
        data-heading="Window"
      >
        Table Row 2, Table Cell 4
      </td>
      <td
        class="table__cell"
        data-heading="Last Update"
      >
        Table Row 2, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
        data-heading="Name"
      >
        Table Row 3, Table Cell 1
      </td>
      <td
        class="table__cell"
        data-heading="Status"
      >
        Table Row 3, Table Cell 2
      </td>
      <td
        class="table__cell"
        data-heading="Chart"
      >
        Table Row 3, Table Cell 3
      </td>
      <td
        class="table__cell"
        data-heading="Window"
      >
        Table Row 3, Table Cell 4
      </td>
      <td
        class="table__cell"
        data-heading="Last Update"
      >
        Table Row 3, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
        data-heading="Name"
      >
        Table Row 4, Table Cell 1
      </td>
      <td
        class="table__cell"
        data-heading="Status"
      >
        Table Row 4, Table Cell 2
      </td>
      <td
        class="table__cell"
        data-heading="Chart"
      >
        Table Row 4, Table Cell 3
      </td>
      <td
        class="table__cell"
        data-heading="Window"
      >
        Table Row 4, Table Cell 4
      </td>
      <td
        class="table__cell"
        data-heading="Last Update"
      >
        Table Row 4, Table Cell 5
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> Zebra story renders snapshot 1`] = `
<table
  class="table table--zebra"
>
  <caption
    class="table__caption u-is-vishidden"
  />
  <thead
    class="table__header"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__cell"
      >
        Name
      </th>
      <th
        class="table__cell"
      >
        Status
      </th>
      <th
        class="table__cell"
      >
        Chart
      </th>
      <th
        class="table__cell"
      >
        Window
      </th>
      <th
        class="table__cell"
      >
        Last Update
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 5
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 5
      </td>
    </tr>
  </tbody>
</table>
`;
